crates/fastc/tests/errors/unsafe_required.fc
// Unsafe required test case
unsafe fn dangerous() -> i32 {
    return 42;
}

fn main() -> i32 {
    return dangerous();
}
